# ina226

./: .gitignore  CMakeLists.txt  README.md  ina226.c  ina226.h  library.json
examples/basic/: main.cpp
hal/: i2c_hal.c  i2c_hal.h
